src/components/WhyFlag/WhyFlag.css
@import url("https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Single+Day&display=swap");

.why-flag-section {
  background-color: #ffffff;
  width: 100%;
  padding: 1em 0;
  font-family: "Bowlby One", sans-serif;
  text-align: center;
}

.why-flag-container-box {
  position: relative;
}

.why-flag-title {
  color: var(--green-color);
  font-size: 2.5em;
  margin-bottom: 0.5em;
  letter-spacing: 0.1em;
  padding-top: 1em;
}

.why-flag-swiper {
  width: 100%;
}

.why-flag-slide {
  display: flex;
  justify-content: center;
}

.container-box {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.box-text {
  width: 100%;
  height: auto;
  color: white;
  padding: 1.6em 2em;
  font-size: 19px;
  text-align: center;
}

.box {
  display: flex;
  width: 1000px;
  height: 550px;
  border-radius: 1px;
  margin: auto;
  text-align: center;
  text-transform: uppercase;
  line-height: 2rem;
  letter-spacing: 3px;
}

.why-flag-img,
img {
  width: 1000px;
  height: 550px;
  object-fit: cover;
}

.container-why-flag {
  position: relative;
  text-align: center;
}

.why-flag-text {
  font-family: "Single Day";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  font-size: 2.4em;
  letter-spacing: 0.1em;
  filter: drop-shadow(0 0 0.5rem rgb(44, 44, 44));
}

.box-half {
  width: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1.7em 2em;
}

.box:hover {
  box-shadow: 10px;
}

.bluebox {
  background-color: var(--blue-color);
}

.greenbox {
  background-color: #009c1b;
  position: relative;
}

.why-flag-navigation {
  display: flex;
  justify-content: space-around;
  margin: -10px;
  gap: 30em;
  padding-bottom: 10px;
}

.swiper-button-prev-why-flag {
  text-decoration: none;
  color: var(--blue-color);
  border: none;
  background: none;
  font-size: 5em;
  cursor: pointer;
  position: relative;
  top: -320px;
  right: 100px;
  z-index: 99999;
}

.swiper-button-next-why-flag {
  text-decoration: none;
  color: var(--blue-color);
  border: none;
  background: none;
  font-size: 5em;
  color: var(--green-color);
  cursor: pointer;
  position: relative;
  top: -320px;
  right: -100px;
  z-index: 99999;
}

@media (max-width: 1072px) {
  .why-flag-section {
    width: 100%;
    padding: 0;
  }

  .why-flag-title {
    padding-top: 1em;
  }

  .why-flag-navigation {
    display: flex;
    justify-content: space-around;
    margin: 2em;
    gap: 10em;
  }
  .why-flag-swiper {
    width: 100%;
  }
  .box {
    display: flex;
    width: 100%;
    height: 550px;
    border-radius: 1px;
    margin: auto;
    text-align: center;
    text-transform: uppercase;
    line-height: 2rem;
    letter-spacing: 3px;
  }
  .box-text {
    width: 80%;
    height: auto;
    color: white;
    padding: 1.7em 2em;
    font-size: 15px;
    text-align: center;
  }
  .why-flag-img {
    width: 100%;
    height: 550px;
    object-fit: cover;
  }
  .swiper-button-next-why-flag {
    color: white;
    top: -320px;
    right: -200px;
    font-size: 3em;
  }
  .swiper-button-prev-why-flag {
    color: white;
    top: -320px;
    right: 200px;
    font-size: 3em;
  }
}

@media (max-width: 768px) {
  .why-flag-section {
    width: 100%;
  }
  .why-flag-navigation {
    display: flex;
    justify-content: space-around;
    margin: 2em;
    gap: 10em;
  }
  .why-flag-swiper {
    width: 100%;
  }
  .box {
    display: flex;
    width: 500px;
    height: 550px;
    border-radius: 1px;
    margin: auto;
    text-align: center;
    text-transform: uppercase;
    line-height: 2rem;
    letter-spacing: 3px;
  }
  .box-text {
    width: 100%;
    height: auto;
    color: white;
    padding: 1.7em 2em;
    font-size: 12px;
    text-align: center;
  }
  .why-flag-img,
  img {
    width: 500px;
    height: 250px;
    object-fit: cover;
  }
  .swiper-button-next-why-flag {
    color: var(--green-color);
    top: -320px;
    right: -90px;
    font-size: 3em;
  }
  .swiper-button-prev-why-flag {
    color: var(--blue-color);
    top: -320px;
    right: 90px;
    font-size: 3em;
  }
}

@media (max-width: 640px) {
  .why-flag-section {
    width: 100%;
  }
  .why-flag-text {
    font-size: 1rem;
    align-self: flex-start;
    margin-bottom: 50px;
  }

  .why-flag-title {
    font-size: 1.5em;
  }
}

@media (max-width: 519px) {
  .why-flag-section {
    width: 100%;
  }
  .why-flag-text {
    font-size: 0.9rem;
    align-self: flex-start;
    margin-bottom: 50px;
  }

  .why-flag-title {
    font-size: 1em;
  }
  .swiper-button-prev-why-flag,
  .swiper-button-next-why-flag {
    font-size: 1.2em;
  }
  .swiper-button-next-why-flag {
    color: white;
    top: -320px;
    right: -70px;
    font-size: 2em;
  }
  .swiper-button-prev-why-flag {
    color: white;
    top: -320px;
    right: 70px;
    font-size: 2em;
  }
}

@media (max-width: 469px) {
  .why-flag-section {
    width: 100%;
  }
  .why-flag-navigation {
    display: flex;
    justify-content: space-around;
    gap: 15em;
    margin: -5px;
    margin-bottom: 20px;
  }
  .why-flag-swiper {
    width: 100%;
    display: flex;
    align-content: center;
  }
  .box {
    display: flex;
    width: 100%;
    height: 400px;
    border-radius: 1px;
    margin: auto;
    text-align: center;
    text-transform: uppercase;
    line-height: 1.5rem;
    letter-spacing: 1px;
  }
  .box-text {
    width: 100%;
    height: auto;
    color: white;
    padding: 1.7em 2em;
    font-size: 8px;
    text-align: center;
  }
  .why-flag-img {
    width: 100%;
    height: 250px;
    object-fit: cover;
    margin-top: 5em;
  }
  .why-flag-text {
    width: 90%;
    margin-top: 2em;
    font-family: "Single Day";
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    font-size: 1.2em;
    font-weight: "800";
    letter-spacing: 0.1em;
    filter: drop-shadow(0 0 0.5rem rgb(44, 44, 44));
  }
  .swiper-button-next-why-flag {
    color: white;
    top: -210px;
    right: -23px;
    font-size: 1.5em;
  }
  .swiper-button-prev-why-flag {
    color: white;
    top: -210px;
    right: 23px;
    font-size: 1.5em;
  }
}

@media (max-width: 363px) {
  .why-flag-section {
    width: 100%;
  }
  .why-flag-navigation {
    display: flex;
    justify-content: space-around;
    gap: 15em;
    margin: -5px;
    margin-bottom: 20px;
  }
  .why-flag-swiper {
    width: 100%;
    display: flex;
    align-content: center;
  }
  .box {
    display: flex;
    width: 100%;
    height: 400px;
    border-radius: 1px;
    margin: auto;
    text-align: center;
    text-transform: uppercase;
    line-height: 1.5rem;
    letter-spacing: 1px;
  }
  .box-text {
    width: 100%;
    height: auto;
    color: white;
    padding: 1.7em 2em;
    font-size: 8px;
    text-align: center;
  }
  .why-flag-img {
    width: 100%;
    height: 250px;
    object-fit: cover;
    margin-top: 5em;
  }
  .why-flag-text {
    width: 90%;
    margin-top: 2em;
    font-family: "Single Day";
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    font-size: 1.2em;
    font-weight: "800";
    letter-spacing: 0.1em;
    filter: drop-shadow(0 0 0.5rem rgb(44, 44, 44));
  }
  .swiper-button-next-why-flag {
    color: white;
    top: -220px;
    right: -16px;
    font-size: 1.5em;
  }
  .swiper-button-prev-why-flag {
    color: white;
    top: -220px;
    right: 16px;
    font-size: 1.5em;
  }
}

/* @media (max-width: 768px) {
  .why-flag-section {
    display: none;
  }
} */

